tests/fixtures/invalid/pow_float_float_bytes.py
# Cannot call pow() with Float, Float, Bytes
x = pow(1.0, 1.0, b"hello")
